[package]
name = "wget"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["stream", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.18.0"                                                # For progress bars
scraper = "0.13"                                                  # For HTML parsing
url = "2.0"
bytes = "1.0"
futures = "0.3"
log = "0.4"
simple_logger = "4.0"                                             # Or env_logger
regex = "1.0"                                                     # For URL/pattern matching
mime = "0.3"                                                      # For content type handling
chrono = "0.4"                                       # For timestamp formatting
daemonize = "0.5.0"
kuchiki = "0.8"